brat/test/golden/error/type-arith2.brat
f(n :: #, Vec(Nat, n * n)) -> Bool
f = ?f
